# wikipedia-histories

./: .gitignore  Change.py  LICENSE  README.md  pyproject.toml  requirements.txt  requires-networks.txt  setup.py
.github/workflows/: publish.yml  python-package.yml
examples/: collect_articles.py  collect_networks.py  demo.py  domains.json
src/: __init__.py
src/networks/: __init__.py
src/wikipedia_histories/: __init__.py  get_category_articles.py  get_histories.py  revision.py
tests/: collect_articles.py  collect_networks.py  conftest.py  create_random_networks.py  demo.py  download_from_csv.py  networks.py  test_domain_change.py
tests/cassettes/test_domain_change/: test_get_history_with_default.yaml  test_get_history_with_other_domain.yaml  test_get_text_raw_html.yaml  test_get_text_split.yaml  test_get_text_with_default_language.yaml  test_get_text_with_other_language.yaml  test_integration.yaml
wikipedia_histories/: __init__.py  analyze_networks.py  categories.py  change.py  cluster.py  generate_networks.py  get_histories.py  metadata.py  network_builder.py  networks.py  retrieve_metadata.py  scrape_complete.py  wikipedia_histories.py
