[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wikipedia_histories"
version = "1.1.0"
description = "A Python tool to pull the complete edit history of a Wikipedia page"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Nathan Drezner", email = "nathan@drezner.xyz" }]
requires-python = ">=3.8"
dependencies = [
    "aiohttp>=3.8.0",
    "lxml>=4.9.1",
    "mwclient>=0.10.1",
    "mwparserfromhell>=0.6",
    "pandas>=1.2.3",
    "wikipedia-api>=0.5.4",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
networks = ["networkx>=2.6", "python-igraph>=0.9.1"]

[project.urls]
Homepage = "https://github.com/ndrezn/wikipedia-histories"

[tool.setuptools.packages.find]
where = ["src"]
